--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -181,6 +181,8 @@
 <li><a href="2024-18.html">Day 18</a></li>
 <li><a href="2024-19.html">Day 19</a></li>
 <li><a href="2024-20.html">Day 20</a></li>
+<li><a href="2024-21.html">Day 21</a></li>
+<li><a href="2024-22.html">Day 22</a></li>
 </ul>
 
                     </main>
