--- a/aoc/2024-22.html
+++ b/aoc/2024-22.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 day 20 - Personal page</title>
+        <title>Year 2024 day 22 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,13 +154,13 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024-day-20"><a class="header" href="#advent-of-code---year-2024-day-20">Advent of code - Year 2024 Day 20</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2024/day/20">day 20</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-22"><a class="header" href="#advent-of-code---year-2024-day-22">Advent of code - Year 2024 Day 22</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/22">day 22</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
-<p>In the first part we will search the graph and find the length of the path. Then we do a flood-fill algorithm on all empty spaces so that we can have 2 picoseconds.</p>
+<p>In the first part we write the instructions as they are given in the description. Then perform <code>2000</code> generations.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<p>In the second part wee only have now 20 picoseconds instead.</p>
+<p>In the second we go through the generated secrets and mark in table first number for each visited sequence. Then add the values from this table to the global table. After computing all secret sequences find the maximum in the table.</p>
 <h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
 <pre><code class="language-go">package main
 
@@ -168,8 +168,8 @@ import (
   "fmt"
   "log"
   "os"
-  "strings"
-  "sync"
+  "regexp"
+  "strconv"
   "time"
 )
 
@@ -184,117 +184,71 @@ func print_result(dur time.Duration, part, result int) {
   fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + fmt.Sprint(result) + Reset)
 }
 
-const Max int = int(^uint(0) &gt;&gt; 1)
-
-func read_file(file_path string) ([][]bool, [2]int, [2]int) {
+func read_file(file_path string) []int {
   content, err := os.ReadFile(file_path)
   if err != nil {
     log.Fatal(err)
   }
-  var start [2]int
-  var end [2]int
-  var m [][]bool
-  for i, line := range strings.Split(string(content), "\n") {
-    if len(line) == 0 {
-      continue
-    }
-    row := make([]bool, len(line))
-    for j, c := range line {
-      switch c {
-        case '#':
-          row[j] = false
-        case '.':
-          row[j] = true
-        case 'S':
-          row[j] = true
-          start = [2]int{i, j}
-        case 'E':
-          row[j] = true
-          end = [2]int{i, j}
-      }
-    }
-    m = append(m, row)
+  regex := regexp.MustCompile("([0-9]+)")
+  var secrets []int
+  for _, find := range regex.FindAllStringSubmatch(string(content), -1) {
+    nr, _ := strconv.Atoi(find[1])
+    secrets = append(secrets, nr)
   }
-  return m, start, end
+  return secrets
 }
 
-func get_neighbours(x, y int) [4][2]int {
-   return [4][2]int{{x + 1,y}, {x - 1, y}, {x, y + 1},{x, y - 1}}
+func mix_and_prune(number, secret int) int {
+  return (secret ^ number) % 16777216
 }
 
-func find_shortest_path(m *[][]bool, position [2]int, length int, visited *[][]int) {
-  if position[0] &lt; 0 || position[1] &lt; 0 || position[0] &gt;= len(*m) || position[1] &gt;= len((*m)[position[0]]) {
-    return
-  }
-  if !(*m)[position[0]][position[1]] || (*visited)[position[0]][position[1]] &lt; length {
-    return
-  }
-  (*visited)[position[0]][position[1]] = length
-  for _, neigh := range get_neighbours(position[0], position[1]) {
-    find_shortest_path(m, neigh, length + 1, visited)
-  }
+func mod(number int) int {
+  return ((number % 4) + 4 ) % 4
 }
 
-func find_shortcuts(m *[][]bool, visited *[][]int, timer, limit, length int, position [2]int, previous map[[2]int]int, ends map[[2]int]bool, cheat bool) {
-  if timer &lt;= 0 {
-    return
-  }
-  timer--
-  length++
-  for _, neigh := range get_neighbours(position[0], position[1]) {
-    if neigh[0] &lt; 0 || neigh[1] &lt; 0 || neigh[0] &gt;= len(*m) || neigh[1] &gt;= len((*m)[neigh[0]]) {
-      continue
-    }
-    if (*m)[neigh[0]][neigh[1]] &amp;&amp; (*visited)[neigh[0]][neigh[1]] - limit &gt;= length {
-      ends[neigh] = true
-    }
-    prev, ok := previous[neigh]
-    if ok &amp;&amp; prev &lt;= length {
-      continue
-    }
-    previous[neigh] = length
-    find_shortcuts(m, visited, timer, limit, length, neigh, previous, ends, cheat &amp;&amp; (*m)[neigh[0]][neigh[1]])
-  }
+func generate(secret int) int {
+  secret = mix_and_prune(secret * 64, secret)
+  secret = mix_and_prune(secret / 32, secret)
+  secret = mix_and_prune(secret * 2048, secret)
+  return secret
 }
 
-func count_shortcuts(picoseconds, limit int) int {
-  result := 0
-  m, start_pos, end_pos := read_file("INPUT")
-  visited := make([][]int, len(m))
-  for i, row := range m {
-    visited[i] = make([]int, len(m[i]))
-    for j := range row {
-      visited[i][j] = Max
-    }
-  }
-  find_shortest_path(&amp;m, start_pos, 0, &amp;visited)
-  var wg sync.WaitGroup
-  c := make(chan int, visited[end_pos[0]][end_pos[1]] + 1)
-  wg.Add(visited[end_pos[0]][end_pos[1]] + 1)
-  for i, row := range m {
-    for j := range row {
-      if m[i][j] {
-        ends := make(map[[2]int]bool)
-        go func(i, j int) {
-          defer wg.Done()
-          find_shortcuts(&amp;m, &amp;visited, picoseconds, limit, visited[i][j], [2]int{i,j}, make(map[[2]int]int), ends, true)
-          c &lt;- len(ends)
-        }(i, j)
+func best_sell(secret int, big_table *map[[4]int]int) {
+  table := make(map[[4]int]int)
+  changes := [4]int{-10, -10, -10, -10}
+  last := 0
+  for i := 0; i &lt; 2000; i++ {
+    secret = generate(secret)
+    changes[i % 4] = (secret % 10) - last
+    last = secret % 10
+    if changes[3] != -10 {
+      key := [4]int{changes[mod(i - 3)], changes[mod(i - 2)], changes[mod(i - 1)], changes[mod(i)]}
+      _, ok := table[key]
+      if !ok {
+        table[key] = secret % 10
       }
     }
   }
-  wg.Wait()
-  close(c)
-  for res := range c {
-    result += res
+  for key, val := range table {
+    total, ok := (*big_table)[key]
+    if ok {
+      (*big_table)[key] = total + val
+    } else {
+      (*big_table)[key] = val
+    }
   }
-  return result
 }
 
 func part_one() {
   var result int
   start := time.Now()
-  result = count_shortcuts(2, 100)
+  secrets := read_file("INPUT")
+  for _, secret := range secrets {
+    for i := 0; i &lt; 2000; i++ {
+      secret = generate(secret)
+    }
+    result += secret
+  }
   end := time.Now()
   print_result(end.Sub(start), 1, result)
 }
@@ -302,13 +256,22 @@ func part_one() {
 func part_two() {
   var result int
   start := time.Now()
-  result = count_shortcuts(20, 100)
+  secrets := read_file("INPUT")
+  table := make(map[[4]int]int)
+  for _, secret := range secrets {
+    best_sell(secret, &amp;table)
+  }
+  for _, val := range table {
+    if val &gt; result {
+      result = val
+    }
+  }
   end := time.Now()
   print_result(end.Sub(start), 2, result)
 }
 
 func main() {
-  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "20 - Claw Contraption" + Reset)
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "22 - Claw Contraption" + Reset)
   part_one()
   part_two()
 }
@@ -318,11 +281,11 @@ func main() {
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-19.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-21.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-21.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -332,11 +295,11 @@ func main() {
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-19.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-21.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-21.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
