deploy: d050038bd1a71da2fbaf8cc7db8f586cd56598dc

--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -183,6 +183,7 @@
 <li><a href="2024-20.html">Day 20</a></li>
 <li><a href="2024-21.html">Day 21</a></li>
 <li><a href="2024-22.html">Day 22</a></li>
+<li><a href="2024-23.html">Day 23</a></li>
 </ul>
 
                     </main>
