--- a/aoc/2024-23.html
+++ b/aoc/2024-23.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2023 - Personal page</title>
+        <title>Year 2024 day 23 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,46 +154,136 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2023"><a class="header" href="#advent-of-code---year-2023">Advent of code - Year 2023</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2023">year 2023</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2023-1.html">Day 1</a></li>
-<li><a href="2023-2.html">Day 2</a></li>
-<li><a href="2023-3.html">Day 3</a></li>
-<li><a href="2023-4.html">Day 4</a></li>
-<li><a href="2023-5.html">Day 5</a></li>
-<li><a href="2023-6.html">Day 6</a></li>
-<li><a href="2023-7.html">Day 7</a></li>
-<li><a href="2023-8.html">Day 8</a></li>
-<li><a href="2023-9.html">Day 9</a></li>
-<li><a href="2023-10.html">Day 10</a></li>
-<li><a href="2023-11.html">Day 11</a></li>
-<li><a href="2023-12.html">Day 12</a></li>
-<li><a href="2023-13.html">Day 13</a></li>
-<li><a href="2023-14.html">Day 14</a></li>
-<li><a href="2023-15.html">Day 15</a></li>
-<li><a href="2023-16.html">Day 16</a></li>
-<li><a href="2023-17.html">Day 17</a></li>
-<li><a href="2023-18.html">Day 18</a></li>
-<li><a href="2023-19.html">Day 19</a></li>
-<li><a href="2023-20.html">Day 20</a></li>
-<li><a href="2023-21.html">Day 21</a></li>
-<li><a href="2023-22.html">Day 22</a></li>
-<li><a href="2023-23.html">Day 23</a></li>
-<li><a href="2023-24.html">Day 24</a></li>
-<li><a href="2023-25.html">Day 25</a></li>
-</ul>
+                        <h1 id="advent-of-code---year-2024-day-23"><a class="header" href="#advent-of-code---year-2024-day-23">Advent of code - Year 2024 Day 23</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/23">day 23</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+<h3 id="information"><a class="header" href="#information">Information</a></h3>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>In the first part we will go through all nodes and look at their neighbours. For every neighbour we try to add additional neighbour and check if he is adjacent to the original node. This way we add all \(3!\) permutation, so we also divide it by <code>6</code>.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>For the second part we use pretty much the same approach. We will be keeping the largest clique found so far. Then we look at the neighbours from one node to find a candidate, if the candidate is adjacent to all added nodes so far, then we just add it as well. This way we find the maximal one.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "sort"
+  "strings"
+  "time"
+)
+
+const (
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
+)
+
+func print_result(dur time.Duration, part int, result string) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + result + Reset)
+}
+
+func read_file(file_path string) map[string][]string {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  connections := make(map[string][]string)
+  regex := regexp.MustCompile("([a-z]+)\\-([a-z]+)")
+  for _, found := range regex.FindAllStringSubmatch(string(content), -1) {
+    connections[found[1]] = append(connections[found[1]], found[2])
+    connections[found[2]] = append(connections[found[2]], found[1])
+  }
+  return connections
+}
+
+func find_triples(connections map[string][]string) int {
+  sum := 0
+  for key, val := range connections {
+    for _, neighbour := range val {
+      for _, third := range connections[neighbour] {
+        for _, circle := range connections[third] {
+          if circle == key &amp;&amp; (third[0] == 't' || key[0] == 't' || neighbour[0] == 't') {
+            sum += 1
+          }
+        }
+      }
+    }
+  }
+  return sum / (3 * 2)
+}
+
+func find_clique(connections map[string][]string) string {
+  max := 0
+  max_clique := make(map[string]bool)
+  for key, val := range connections {
+    for _, neighbour := range val {
+      clique := make(map[string]bool, 0)
+      clique[key] = true
+      clique[neighbour] = true
+    outer:
+      for _, candidate := range connections[neighbour] {
+      inner:
+        for inside := range clique {
+          for _, s := range connections[candidate] {
+            if s == inside {
+              continue inner
+            }
+          }
+          continue outer
+        }
+        clique[candidate] = true
+      }
+      if max &lt; len(clique) {
+        max_clique = clique
+        max = len(max_clique)
+      }
+    }
+  }
+  var result []string
+  for key := range max_clique {
+    result = append(result, key)
+  }
+  sort.Strings(result)
+  return strings.Join(result, ",")
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  connections := read_file("INPUT")
+  result = find_triples(connections)
+  end := time.Now()
+  print_result(end.Sub(start), 1, fmt.Sprint(result))
+}
+
+func part_two() {
+  var result string
+  start := time.Now()
+  connections := read_file("INPUT")
+  result = find_clique(connections)
+  end := time.Now()
+  print_result(end.Sub(start), 2, result)
+}
+
+func main() {
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "23 - Claw Contraption" + Reset)
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2024-23.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-22.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2023-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -203,11 +293,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2024-23.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-22.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2023-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
