--- a/print.html
+++ b/print.html
@@ -3780,16 +3780,16 @@ func read_file(file_path string) ([][]bool, [2]int, [2]int) {
     row := make([]bool, len(line))
     for j, c := range line {
       switch c {
-        case '#':
-          row[j] = false
-        case '.':
-          row[j] = true
-        case 'S':
-          row[j] = true
-          start = [2]int{i, j}
-        case 'E':
-          row[j] = true
-          end = [2]int{i, j}
+      case '#':
+        row[j] = false
+      case '.':
+        row[j] = true
+      case 'S':
+        row[j] = true
+        start = [2]int{i, j}
+      case 'E':
+        row[j] = true
+        end = [2]int{i, j}
       }
     }
     m = append(m, row)
@@ -3798,7 +3798,7 @@ func read_file(file_path string) ([][]bool, [2]int, [2]int) {
 }
 
 func get_neighbours(x, y int) [4][2]int {
-   return [4][2]int{{x + 1,y}, {x - 1, y}, {x, y + 1},{x, y - 1}}
+  return [4][2]int{{x + 1, y}, {x - 1, y}, {x, y + 1}, {x, y - 1}}
 }
 
 func find_shortest_path(m *[][]bool, position [2]int, length int, visited *[][]int) {
@@ -3810,7 +3810,7 @@ func find_shortest_path(m *[][]bool, position [2]int, length int, visited *[][]i
   }
   (*visited)[position[0]][position[1]] = length
   for _, neigh := range get_neighbours(position[0], position[1]) {
-    find_shortest_path(m, neigh, length + 1, visited)
+    find_shortest_path(m, neigh, length+1, visited)
   }
 }
 
@@ -3824,7 +3824,7 @@ func find_shortcuts(m *[][]bool, visited *[][]int, timer, limit, length int, pos
     if neigh[0] &lt; 0 || neigh[1] &lt; 0 || neigh[0] &gt;= len(*m) || neigh[1] &gt;= len((*m)[neigh[0]]) {
       continue
     }
-    if (*m)[neigh[0]][neigh[1]] &amp;&amp; (*visited)[neigh[0]][neigh[1]] - limit &gt;= length {
+    if (*m)[neigh[0]][neigh[1]] &amp;&amp; (*visited)[neigh[0]][neigh[1]]-limit &gt;= length {
       ends[neigh] = true
     }
     prev, ok := previous[neigh]
@@ -3848,7 +3848,7 @@ func count_shortcuts(picoseconds, limit int) int {
   }
   find_shortest_path(&amp;m, start_pos, 0, &amp;visited)
   var wg sync.WaitGroup
-  c := make(chan int, visited[end_pos[0]][end_pos[1]] + 1)
+  c := make(chan int, visited[end_pos[0]][end_pos[1]]+1)
   wg.Add(visited[end_pos[0]][end_pos[1]] + 1)
   for i, row := range m {
     for j := range row {
@@ -3856,7 +3856,7 @@ func count_shortcuts(picoseconds, limit int) int {
         ends := make(map[[2]int]bool)
         go func(i, j int) {
           defer wg.Done()
-          find_shortcuts(&amp;m, &amp;visited, picoseconds, limit, visited[i][j], [2]int{i,j}, make(map[[2]int]int), ends, true)
+          find_shortcuts(&amp;m, &amp;visited, picoseconds, limit, visited[i][j], [2]int{i, j}, make(map[[2]int]int), ends, true)
           c &lt;- len(ends)
         }(i, j)
       }
@@ -4215,13 +4215,13 @@ func mix_and_prune(number, secret int) int {
 }
 
 func mod(number int) int {
-  return ((number % 4) + 4 ) % 4
+  return ((number % 4) + 4) % 4
 }
 
 func generate(secret int) int {
-  secret = mix_and_prune(secret * 64, secret)
-  secret = mix_and_prune(secret / 32, secret)
-  secret = mix_and_prune(secret * 2048, secret)
+  secret = mix_and_prune(secret*64, secret)
+  secret = mix_and_prune(secret/32, secret)
+  secret = mix_and_prune(secret*2048, secret)
   return secret
 }
 
@@ -4231,10 +4231,10 @@ func best_sell(secret int, big_table *map[[4]int]int) {
   last := 0
   for i := 0; i &lt; 2000; i++ {
     secret = generate(secret)
-    changes[i % 4] = (secret % 10) - last
+    changes[i%4] = (secret % 10) - last
     last = secret % 10
     if changes[3] != -10 {
-      key := [4]int{changes[mod(i - 3)], changes[mod(i - 2)], changes[mod(i - 1)], changes[mod(i)]}
+      key := [4]int{changes[mod(i-3)], changes[mod(i-2)], changes[mod(i-1)], changes[mod(i)]}
       _, ok := table[key]
       if !ok {
         table[key] = secret % 10
