--- a/aoc/2024-24.html
+++ b/aoc/2024-24.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2024 - Personal page</title>
+        <title>Year 2024 day 24 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,48 +154,181 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2024"><a class="header" href="#advent-of-code---year-2024">Advent of code - Year 2024</a></h1>
-<p>This contains tasks from the <a href="https://adventofcode.com/2024">year 2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2024-day-24"><a class="header" href="#advent-of-code---year-2024-day-24">Advent of code - Year 2024 Day 24</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2024/day/24">day 24</a>. Go back to year <a href="2024.html">2024</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
-<p>In this years advent of code I will try to use <code>go</code> <a href="https://go.dev">programming language</a> to solve all problems. Lets see how far I will get by doing so.</p>
-<p>Beside solving each problem I will be focusing on the readability of the code.</p>
-<h3 id="days"><a class="header" href="#days">Days</a></h3>
-<ul>
-<li><a href="2024-1.html">Day 1</a></li>
-<li><a href="2024-2.html">Day 2</a></li>
-<li><a href="2024-3.html">Day 3</a></li>
-<li><a href="2024-4.html">Day 4</a></li>
-<li><a href="2024-5.html">Day 5</a></li>
-<li><a href="2024-6.html">Day 6</a></li>
-<li><a href="2024-7.html">Day 7</a></li>
-<li><a href="2024-8.html">Day 8</a></li>
-<li><a href="2024-9.html">Day 9</a></li>
-<li><a href="2024-10.html">Day 10</a></li>
-<li><a href="2024-11.html">Day 11</a></li>
-<li><a href="2024-12.html">Day 12</a></li>
-<li><a href="2024-13.html">Day 13</a></li>
-<li><a href="2024-14.html">Day 14</a></li>
-<li><a href="2024-15.html">Day 15</a></li>
-<li><a href="2024-16.html">Day 16</a></li>
-<li><a href="2024-17.html">Day 17</a></li>
-<li><a href="2024-18.html">Day 18</a></li>
-<li><a href="2024-19.html">Day 19</a></li>
-<li><a href="2024-20.html">Day 20</a></li>
-<li><a href="2024-21.html">Day 21</a></li>
-<li><a href="2024-22.html">Day 22</a></li>
-<li><a href="2024-23.html">Day 23</a></li>
-<li><a href="2024-24.html">Day 24</a></li>
-</ul>
+<h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>For the first part we only evaluate all of the gates and recreate the number.</p>
+<h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
+<p>For the second part it is somewhat easier to look up by hand. There are three easy candidates with <code>z</code> values. next you may recreate a mermaid diagram by using regex <code>([0-9a-z]+) ((?:OR)|(?:AND)|(?:XOR)) ([0-9a-z]+) -&gt; ([0-9a-z]+)</code> and replace it by <code>\1 -- "\2" --&gt; \4;\n\3 -- "\2" --&gt; \4;</code>.</p>
+<h2 id="maingo"><a class="header" href="#maingo">main.go</a></h2>
+<pre><code class="language-go">package main
+
+import (
+  "fmt"
+  "log"
+  "os"
+  "regexp"
+  "sort"
+  "strings"
+  "time"
+)
+
+const (
+  Blue   = "[1;34m"
+  Yellow = "[1;33m"
+  Green  = "[1;32m"
+  Reset  = "[0m"
+)
+
+func print_result(dur time.Duration, part int, result string) {
+  fmt.Println("Part " + fmt.Sprint(part) + " [" + Blue + fmt.Sprint(dur) + Reset + "]: " + Yellow + result + Reset)
+}
+
+const (
+  And = 0
+  Or  = 1
+  Xor = 2
+)
+
+type Gate struct {
+  inputs    [2]string
+  output    string
+  gate      int
+  evaluated bool
+  switched  bool
+}
+
+func read_file(file_path string) ([]Gate, map[string]bool) {
+  content, err := os.ReadFile(file_path)
+  if err != nil {
+    log.Fatal(err)
+  }
+  inits := regexp.MustCompile("([0-9a-z]+): (0|1)")
+  regex_gates := regexp.MustCompile("([0-9a-z]+) ((?:AND)|(?:OR)|(?:XOR)) ([0-9a-z]+) \\-&gt; ([0-9a-z]+)")
+  values := make(map[string]bool)
+  var gates []Gate
+  for _, found := range inits.FindAllStringSubmatch(string(content), -1) {
+    if found[2] == "1" {
+      values[found[1]] = true
+    } else {
+      values[found[1]] = false
+    }
+  }
+  for _, found := range regex_gates.FindAllStringSubmatch(string(content), -1) {
+    switch found[2] {
+    case "OR":
+      gates = append(gates, Gate{[2]string{found[1], found[3]}, found[4], Or, false, false})
+    case "XOR":
+      gates = append(gates, Gate{[2]string{found[1], found[3]}, found[4], Xor, false, false})
+    case "AND":
+      gates = append(gates, Gate{[2]string{found[1], found[3]}, found[4], And, false, false})
+    }
+  }
+  return gates, values
+}
+
+func eval_bit(values *map[string]bool, first_symbol byte) (int, []int) {
+  var number []string
+  for key := range *values {
+    if key[0] == first_symbol {
+      number = append(number, key)
+    }
+  }
+  sort.Strings(number)
+  var bits []int
+  sum := 0
+  acc := 1
+  for i := 0; i &lt; len(number); i++ {
+    val, _ := (*values)[number[i]]
+    if val {
+      bits = append(bits, 1)
+      sum += acc
+    } else {
+      bits = append(bits, 0)
+    }
+    acc = 2 * acc
+  }
+  return sum, bits
+}
+
+func evaluate_gates(gates *[]Gate, values *map[string]bool) {
+  for i := range *gates {
+    (*gates)[i].evaluated = false
+  }
+  done := true
+  for done {
+    done = false
+    for i, gate := range *gates {
+      if gate.evaluated {
+        continue
+      }
+      done = true
+      first, first_ok := (*values)[gate.inputs[0]]
+      second, second_ok := (*values)[gate.inputs[1]]
+      if first_ok &amp;&amp; second_ok {
+        (*gates)[i].evaluated = true
+        switch gate.gate {
+        case And:
+          (*values)[(*gates)[i].output] = first &amp;&amp; second
+        case Or:
+          (*values)[(*gates)[i].output] = first || second
+        case Xor:
+          (*values)[(*gates)[i].output] = first != second
+        }
+      }
+    }
+  }
+}
+
+func find_candidates(gates []Gate) []string {
+  var candidates []string
+  for _, gate := range gates {
+    if gate.output[0] == 'z' &amp;&amp; gate.gate != Xor {
+      candidates = append(candidates, gate.output)
+    }
+  }
+  sort.Strings(candidates)
+  return candidates[:len(candidates)-1]
+}
+
+func part_one() {
+  var result int
+  start := time.Now()
+  gates, values := read_file("INPUT")
+  evaluate_gates(&amp;gates, &amp;values)
+  result, _ = eval_bit(&amp;values, 'z')
+  end := time.Now()
+  print_result(end.Sub(start), 1, fmt.Sprint(result))
+}
+
+func part_two() {
+  var result string
+  start := time.Now()
+  gates, _ := read_file("INPUT")
+  candidates := find_candidates(gates)
+  sort.Strings(candidates)
+  result = strings.Join(candidates, ",")
+  end := time.Now()
+  print_result(end.Sub(start), 2, result)
+}
+
+func main() {
+  fmt.Println("Year " + Green + "2024" + Reset + " day " + Green + "24 - Claw Contraption" + Reset)
+  part_one()
+  part_two()
+}
+</code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../adventofcode.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2024-23.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2024-1.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2023.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -205,11 +338,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../adventofcode.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2024-23.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2024-1.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2023.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
