--- a/aoc/2024.html
+++ b/aoc/2024.html
@@ -185,6 +185,7 @@
 <li><a href="2024-22.html">Day 22</a></li>
 <li><a href="2024-23.html">Day 23</a></li>
 <li><a href="2024-24.html">Day 24</a></li>
+<li><a href="2024-25.html">Day 25</a></li>
 </ul>
 
                     </main>
