deploy: 3b8384ed0271c27b7a6551ce13e71530e711f557

--- a/adventofcode.html
+++ b/adventofcode.html
@@ -156,7 +156,7 @@
                     <main>
                         <h1 id="advent-of-code"><a class="header" href="#advent-of-code">Advent of code</a></h1>
 <p>They are my solutions to <a href="https://adventofcode.com/">advent of code</a> tasks. There are separated to each year and day. All of this can be found on <a href="https://github.com/metury/advent-of-code">GitHub</a>, also with the script that generates these pages.
-Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> that someone made. Also you may consider joining <a href="https://www.reddit.com/r/adventofcode/">Reddit</a> where you may find useful tips, or help someone.</p>
+Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> that someone made. Also you may consider joining <a href="https://www.reddit.com/r/adventofcode/">Reddit</a> where you may find useful tips, or help someone. Lastly there is an <a href="https://jeroenheijmans.github.io/advent-of-code-surveys/">unofficial survey</a>.</p>
 <h3 id="years"><a class="header" href="#years">Years</a></h3>
 <ul>
 <li><a href="./aoc/2024.html">Year 2024</a></li>
