--- a/aoc/2022.html
+++ b/aoc/2022.html
@@ -173,6 +173,8 @@
 <li><a href="2022-13.html">Day 13</a></li>
 <li><a href="2022-14.html">Day 14</a></li>
 <li><a href="2022-15.html">Day 15</a></li>
+<li><a href="2022-16.html">Day 16</a></li>
+<li><a href="2022-17.html">Day 17</a></li>
 </ul>
 
                     </main>
