--- a/aoc/2015-6.html
+++ b/aoc/2015-6.html
@@ -287,6 +287,37 @@ fn main() {
     part2();
 }
 </code></pre>
+<h2 id="mainexs"><a class="header" href="#mainexs">main.exs</a></h2>
+<pre><code class="language-exs">IO.puts("Year 2015 day 6 - Probably a Fire Hazard")
+
+if {:ok, string} = File.read("INPUT") do
+  array = :array.new(size: 1000 * 1000, default: false)
+  result = Regex.scan(~r/((?:turn off)|(?:turn on)|(?:toggle)) ([0-9]+),([0-9]+) through ([0-9]+),([0-9]+)/, String.trim(string))
+  |&gt; Enum.map(fn [_, keyword, x, y, end_x, end_y] -&gt; [keyword, Integer.parse(x), Integer.parse(y), Integer.parse(end_x), Integer.parse(end_y)] end)
+  |&gt; Enum.map(fn [keyword, {start_x, _}, {start_y, _}, {end_x, _}, {end_y, _}] -&gt; {keyword, for x &lt;- start_x..end_x, y &lt;- start_y..end_y do 1000*x + y end} end)
+  |&gt; List.foldl(array, fn {keyword, range}, acc -&gt;
+  case keyword do
+    "turn on" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, true, acc) end)
+    "turn off" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, false, acc) end)
+    "toggle" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, not :array.get(x, acc), acc) end)
+  end end)
+  IO.puts("Part 1: #{Enum.count(:array.to_list(result), fn x -&gt; x end)}")
+end
+
+if {:ok, string} = File.read("INPUT") do
+  array = :array.new(size: 1000 * 1000, default: 0)
+  result = Regex.scan(~r/((?:turn off)|(?:turn on)|(?:toggle)) ([0-9]+),([0-9]+) through ([0-9]+),([0-9]+)/, String.trim(string))
+  |&gt; Enum.map(fn [_, keyword, x, y, end_x, end_y] -&gt; [keyword, Integer.parse(x), Integer.parse(y), Integer.parse(end_x), Integer.parse(end_y)] end)
+  |&gt; Enum.map(fn [keyword, {start_x, _}, {start_y, _}, {end_x, _}, {end_y, _}] -&gt; {keyword, for x &lt;- start_x..end_x, y &lt;- start_y..end_y do 1000*x + y end} end)
+  |&gt; List.foldl(array, fn {keyword, range}, acc -&gt;
+  case keyword do
+    "turn on" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, :array.get(x, acc) + 1, acc) end)
+    "turn off" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, Enum.max([0, :array.get(x, acc) - 1]), acc) end)
+    "toggle" -&gt;  Enum.reduce(range, acc, fn x, acc -&gt; :array.set(x, :array.get(x, acc) + 2, acc) end)
+  end end)
+  IO.puts("Part 2: #{Enum.sum(:array.to_list(result))}")
+end
+</code></pre>
 
                     </main>
 
