--- a/aoc/2015-10.html
+++ b/aoc/2015-10.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Year 2022 day 17 - Personal page</title>
+        <title>Year 2015 day 10 - Personal page</title>
 
 
         <!-- Custom HTML head -->
@@ -154,129 +154,47 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="advent-of-code---year-2022-day-17"><a class="header" href="#advent-of-code---year-2022-day-17">Advent of code - Year 2022 Day 17</a></h1>
-<p>This is a solution of the <a href="https://adventofcode.com/2022/day/17">day 17</a>. Go back to year <a href="2022.html">2022</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
+                        <h1 id="advent-of-code---year-2015-day-10"><a class="header" href="#advent-of-code---year-2015-day-10">Advent of code - Year 2015 Day 10</a></h1>
+<p>This is a solution of the <a href="https://adventofcode.com/2015/day/10">day 10</a>. Go back to year <a href="2015.html">2015</a>. Go back to <a href="../adventofcode.html">AOC</a>.</p>
 <h3 id="information"><a class="header" href="#information">Information</a></h3>
 <h4 id="part-1"><a class="header" href="#part-1">Part 1</a></h4>
+<p>We will generate one by one all next variations from the input. That will be done <code>40</code> times.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
-<h2 id="mainpy"><a class="header" href="#mainpy">main.py</a></h2>
-<pre><code class="language-py">#!/usr/bin/env python3
+<p>For the second part we add <code>10</code> more iterations.</p>
+<h2 id="mainexs"><a class="header" href="#mainexs">main.exs</a></h2>
+<pre><code class="language-exs">IO.puts("Year 2015 day 10 - Elves Look, Elves Say")
 
-def read_file(file):
-  instructions = ""
-  with open(file, 'r') as f:
-    for line in f:
-      if len(line) == 0:
-        continue
-      instructions = line[:-1]
-  return instructions
+defmodule Digits do
+  def next(current, counter, []), do: [counter, current]
 
-def change(block, x, y):
-  for i, part in enumerate(block):
-      block[i] = (part[0] + x, part[1] + y)
+  def next(current, counter, [h | l]) do
+    cond do
+      current == h -&gt; next(current, counter + 1, l)
+      current != h -&gt; [counter, current] ++ next(h, 1, l)
+    end
+  end
 
-def move(block, movement, blocks):
-  if movement == "&lt;":
-    change(block, 0, -1)
-    for part in block:
-      if part[1] &lt; 0:
-        change(block, 0, 1)
-        break
-      for b in blocks:
-        if b == part:
-          change(block, 0, 1)
-          break
-  if movement == "&gt;":
-    change(block, 0, 1)
-    for part in block:
-      if part[1] &gt;= 7:
-        change(block, 0, -1)
-        break
-      for b in blocks:
-        if b == part:
-          change(block, 0, -1)
-          break
-  change(block, -1, 0)
-  for part in block:
-    if part[0] &lt; 0:
-      change(block, 1, 0)
-      return True
-    for b in blocks:
-      if b == part:
-        change(block, 1, 0)
-        return True
-  return False
+  def next([h | l]), do: next(h, 1, l)
+end
 
-class Block:
-  def __init__(self):
-    self.current = 0
-  def new(self, height):
-    self.current = (self.current + 1) % 5
-    if self.current == 1:
-      return [(height, 2), (height, 3), (height, 4), (height, 5)]
-    if self.current == 2:
-      return [(height+1, 2), (height+1, 3), (height+1, 4), (height+2, 3), (height, 3)]
-    if self.current == 3:
-      return [(height, 2), (height, 3), (height, 4), (height+1, 4), (height+2, 4)]
-    if self.current == 4:
-      return [(height, 2), (height+1, 2), (height+2, 2), (height+3, 2)]
-    if self.current == 0:
-      return [(height+1, 2), (height+1, 3), (height, 2), (height, 3)]
-
-def part1():
-  instructions = read_file("INPUT")
-  block = Block()
-  blocks = []
-  height = 3
-  current = block.new(height)
-  counter = 0
-  i = 0
-  while counter &lt; 2022:
-    end = move(current, instructions[i], blocks)
-    i = (i + 1) % len(instructions)
-    if end:
-      counter += 1
-      for c in current:
-        blocks.append(c)
-      height = max([b[0] for b in blocks]) + 4
-      current = block.new(height)
-  print(f"Part 1: {max([b[0] for b in blocks]) + 1}")
-
-def part2():
-  instructions = read_file("INPUT")
-  block = Block()
-  blocks = []
-  height = 3
-  current = block.new(height)
-  counter = 0
-  i = 0
-  while counter &lt; 1000000000000:
-    end = move(current, instructions[i], blocks)
-    i = (i + 1) % len(instructions)
-    if end:
-      counter += 1
-      for c in current:
-        blocks.append(c)
-      height = max([b[0] for b in blocks]) + 4
-      current = block.new(height)
-  print(f"Part 1: {max([b[0] for b in blocks]) + 1}")
-
-if __name__ == "__main__":
-  print("Year 2022 day 17 - Pyroclastic Flow")
-  part1()
-  part2()
-
+if {:ok, content} = File.read("INPUT") do
+  input = String.trim(content) |&gt; String.graphemes() |&gt; Enum.map(fn x -&gt; if {val, _} = Integer.parse(x) do val end end)
+  result = Enum.reduce(1..40, input, fn _, acc -&gt; Digits.next(acc) end)
+  IO.puts("Part 1: #{length(result)}")
+  result = Enum.reduce(1..10, result, fn _, acc -&gt; Digits.next(acc) end)
+  IO.puts("Part 2: #{length(result)}")
+end
 </code></pre>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../aoc/2022-16.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../aoc/2015-9.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../aoc/2021.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next prefetch" href="../aoc/2015-11.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -286,11 +204,11 @@ if __name__ == "__main__":
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../aoc/2022-16.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../aoc/2015-9.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../aoc/2021.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next prefetch" href="../aoc/2015-11.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
