--- a/aoc/2015-3.html
+++ b/aoc/2015-3.html
@@ -161,55 +161,39 @@
 <p>In the first part we remember in a set whihc positins were visited and count the size of the set.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>In the second part we only swap these values every time and after that we do the same thing. So we switch the santas.</p>
-<h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use std::collections::HashSet;
-use std::fs;
+<h2 id="mainexs"><a class="header" href="#mainexs">main.exs</a></h2>
+<pre><code class="language-exs">IO.puts("Year 2015 day 3 - Perfectly Spherical Houses in a Vacuum")
 
-type Pos = (i64, i64);
-type Houses = HashSet&lt;Pos&gt;;
+if {:ok, string} = File.read("INPUT") do
+  {map, _, _} = string |&gt; String.graphemes()
+  |&gt; List.foldl({%{}, 0,0}, fn(x, {map, acc_x, acc_y}) -&gt;
+  cond do
+    x == "&lt;" -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x - 1, acc_y}
+    x == "&gt;" -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x + 1, acc_y}
+    x == "^" -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y - 1}
+    x == "v" -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y + 1}
+    true     -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y}
+  end end)
+  IO.puts("Part 1: #{map_size(map)}")
+end
 
-fn read_file(filepath: &amp;str) -&gt; String {
-    let contents = fs::read_to_string(filepath);
-    let binding = contents.expect("REASON");
-    binding.split('\n').next().unwrap().to_string()
-}
-
-fn found_houses(line: &amp;str, robo_santa: bool) -&gt; usize {
-    let mut houses: Houses = HashSet::new();
-    let mut pos: Pos = (0, 0);
-    let mut robo_pos: Pos = (0, 0);
-    houses.insert(pos);
-    for c in line.chars() {
-        match c {
-            '&gt;' =&gt; pos = (pos.0, pos.1 + 1),
-            '&lt;' =&gt; pos = (pos.0, pos.1 - 1),
-            'v' =&gt; pos = (pos.0 + 1, pos.1),
-            '^' =&gt; pos = (pos.0 - 1, pos.1),
-            _ =&gt; pos = pos,
-        }
-        houses.insert(pos);
-        if robo_santa {
-            (pos, robo_pos) = (robo_pos, pos);
-        }
-    }
-    houses.len()
-}
-
-fn part1() {
-    let line = read_file("INPUT");
-    println!("Part 1: {}", found_houses(&amp;line, false));
-}
-
-fn part2() {
-    let line = read_file("INPUT");
-    println!("Part 2: {}", found_houses(&amp;line, true));
-}
-
-fn main() {
-    println!("Year 2015 day 3 - Perfectly Spherical Houses in a Vacuum");
-    part1();
-    part2();
-}
+if {:ok, string} = File.read("INPUT") do
+  {map, _, _, _, _, _} = string |&gt; String.graphemes()
+  |&gt; List.foldl({%{},0,0,false, 0, 0}, fn(x, {map, acc_x, acc_y, robo, robo_x, robo_y}) -&gt;
+  cond do
+    x == "&lt;" and not robo -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x - 1, acc_y, true, robo_x, robo_y}
+    x == "&gt;" and not robo -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x + 1, acc_y, true, robo_x, robo_y}
+    x == "^" and not robo -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y - 1, true, robo_x, robo_y}
+    x == "v" and not robo -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y + 1, true, robo_x, robo_y}
+    x == "&lt;" and robo     -&gt; {Map.put_new(map, "#{robo_x}X#{robo_y}", true), acc_x, acc_y, false, robo_x - 1, robo_y}
+    x == "&gt;" and robo     -&gt; {Map.put_new(map, "#{robo_x}X#{robo_y}", true), acc_x, acc_y, false, robo_x + 1, robo_y}
+    x == "^" and robo     -&gt; {Map.put_new(map, "#{robo_x}X#{robo_y}", true), acc_x, acc_y, false, robo_x, robo_y - 1}
+    x == "v" and robo     -&gt; {Map.put_new(map, "#{robo_x}X#{robo_y}", true), acc_x, acc_y, false, robo_x, robo_y + 1}
+    not robo              -&gt; {Map.put_new(map, "#{acc_x}X#{acc_y}", true), acc_x, acc_y, true, robo_x, robo_y}
+    robo                  -&gt; {Map.put_new(map, "#{robo_x}X#{robo_y}", true), acc_x, acc_y, false, robo_x, robo_y}
+  end end)
+  IO.puts("Part 2: #{map_size(map)}")
+end
 </code></pre>
 
                     </main>
