--- a/aoc/2015-4.html
+++ b/aoc/2015-4.html
@@ -161,47 +161,21 @@
 <p>First of all we import <code>md-5</code> library to compute the hashes. Then simply compute the hashses of <code>key</code> appended by iterating indexes.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>The second part is same only we check six zeros.</p>
-<h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use md5::{Digest, Md5};
-use std::fs;
+<h2 id="mainexs"><a class="header" href="#mainexs">main.exs</a></h2>
+<pre><code class="language-exs">IO.puts("Year 2015 day 4 - The Ideal Stocking Stuffer")
 
-fn read_file(filepath: &amp;str) -&gt; String {
-    let contents = fs::read_to_string(filepath);
-    let binding = contents.expect("REASON");
-    binding.split('\n').next().unwrap().to_string()
-}
+defmodule Crypto do
+  def find(key, size, prefix) do
+    Stream.iterate(0, fn x -&gt; x + 1 end)
+    |&gt; Enum.take_while(fn x -&gt; :crypto.hash(:md5, key &lt;&gt; "#{x}") |&gt; Base.encode16() |&gt; String.slice(0, size) != prefix end)
+    |&gt; length()
+  end
+end
 
-fn prefix_md5(origin: &amp;str, eq: &amp;str) -&gt; u64 {
-    let mut i: u64 = 0;
-    loop {
-        let input = format!("{}{}", origin, i);
-        let mut hasher = Md5::new();
-        hasher.update(input);
-        let result = hasher.finalize();
-        let hash_string = format!("{:x}", result);
-        if hash_string[0..eq.len()] == eq.to_string() {
-            break;
-        }
-        i += 1;
-    }
-    i
-}
-
-fn part1() {
-    let origin = read_file("INPUT");
-    println!("Part 1: {}", prefix_md5(&amp;origin, "00000"));
-}
-
-fn part2() {
-    let origin = read_file("INPUT");
-    println!("Part 2: {}", prefix_md5(&amp;origin, "000000"));
-}
-
-fn main() {
-    println!("Year 2015 day 4 - The Ideal Stocking Stuffer");
-    part1();
-    part2();
-}
+if {:ok, string} = File.read("INPUT") do
+  IO.puts("Part 1: #{Crypto.find(String.trim(string), 5, "00000")}")
+  IO.puts("Part 2: #{Crypto.find(String.trim(string), 6, "000000")}")
+end
 </code></pre>
 
                     </main>
