--- a/aoc/2015-5.html
+++ b/aoc/2015-5.html
@@ -161,67 +161,29 @@
 <p>For the first part we only need to configure the right regexes to represent each type. And than either mathc them or count them.</p>
 <h4 id="part-2"><a class="header" href="#part-2">Part 2</a></h4>
 <p>The second part is similiar only we use different regexes.</p>
-<h2 id="mainrs"><a class="header" href="#mainrs">main.rs</a></h2>
-<pre><code class="language-rs">use fancy_regex::Regex as Rgx;
-use regex::Regex;
-use std::fs;
+<h2 id="mainexs"><a class="header" href="#mainexs">main.exs</a></h2>
+<pre><code class="language-exs">IO.puts("Year 2015 day 5 - Doesn't He Have Intern-Elves For This?")
 
-fn read_file(filepath: &amp;str) -&gt; Vec&lt;String&gt; {
-    let contents = fs::read_to_string(filepath);
-    let binding = contents.expect("REASON");
-    let lines = binding
-        .split('\n')
-        .filter(|c| c.len() &gt; 0)
-        .map(|c| c.to_string())
-        .collect();
-    lines
-}
+if {:ok, string} = File.read("INPUT") do
+  result = String.trim(string)
+  |&gt; String.split("\n")
+  |&gt; Enum.filter(fn x -&gt; String.length(x) &gt; 0 end)
+  |&gt; Enum.filter(fn x -&gt; String.match?(x, ~r/([a-z])\1/) end)
+  |&gt; Enum.filter(fn x -&gt; String.graphemes(x) |&gt; Enum.filter(fn x -&gt; x == "a" or x == "e" or x == "i" or x == "o" or x == "u" end) |&gt; Enum.count() &gt;= 3 end)
+  |&gt; Enum.filter(fn x -&gt; not String.match?(x, ~r/(?:ab)|(?:cd)|(?:pq)|(?:xy)/) end)
+  |&gt; Enum.count()
+  IO.puts("Part 1: #{result}")
+end
 
-fn nice_string(lines: &amp;Vec&lt;String&gt;) -&gt; u64 {
-    let mut total: u64 = 0;
-    let vowels = Regex::new(r"a|e|i|o|u").unwrap();
-    let pairs = Rgx::new(r"([a-z])\1").unwrap();
-    let forb = Regex::new(r"ab|cd|pq|xy").unwrap();
-    for line in lines {
-        let nr_vowels = vowels.captures_iter(&amp;line).count();
-        let exists_pairs = pairs.is_match(&amp;line).unwrap();
-        let nr_forb = forb.captures_iter(&amp;line).count();
-        if nr_vowels &gt;= 3 &amp;&amp; exists_pairs &amp;&amp; nr_forb &lt;= 0 {
-            total += 1;
-        }
-    }
-    total
-}
-
-fn nicer_string(lines: &amp;Vec&lt;String&gt;) -&gt; u64 {
-    let mut total: u64 = 0;
-    let pairs = Rgx::new(r"([a-z]{2}).*\1").unwrap();
-    let middle = Rgx::new(r"([a-z])[a-z]\1").unwrap();
-    for line in lines {
-        let is_pair = pairs.is_match(&amp;line).unwrap();
-        let is_middle = middle.is_match(&amp;line).unwrap();
-        if is_pair &amp;&amp; is_middle {
-            total += 1;
-        }
-    }
-    total
-}
-
-fn part1() {
-    let lines = read_file("INPUT");
-    println!("Part 1: {}", nice_string(&amp;lines));
-}
-
-fn part2() {
-    let lines = read_file("INPUT");
-    println!("Part 2: {}", nicer_string(&amp;lines));
-}
-
-fn main() {
-    println!("Year 2015 day 5 - Doesn't He Have Intern-Elves For This?");
-    part1();
-    part2();
-}
+if {:ok, string} = File.read("INPUT") do
+  result = String.trim(string)
+  |&gt; String.split("\n")
+  |&gt; Enum.filter(fn x -&gt; String.length(x) &gt; 0 end)
+  |&gt; Enum.filter(fn x -&gt; String.match?(x, ~r/([a-z]{2}).*\1/) end)
+  |&gt; Enum.filter(fn x -&gt; String.match?(x, ~r/([a-z]).\1/) end)
+  |&gt; Enum.count()
+  IO.puts("Part 2: #{result}")
+end
 </code></pre>
 
                     </main>
