--- a/aoc/2015-7.html
+++ b/aoc/2015-7.html
@@ -266,7 +266,23 @@ fn part1() {
 }
 
 fn part2() {
-    println!("Part 2: {}", 0);
+    let mut gates = read_file("INPUT");
+    let mut assigned: HashMap&lt;String, u16&gt; = HashMap::new();
+    assigned.insert("".to_string(), 0);
+    while !assigned.contains_key("a") {
+        for gate in &amp;gates {
+            gate.eval(&amp;mut assigned);
+        }
+    }
+    gates.push(Gate{inputs: [assigned["a"].to_string(), "".to_string()], gate_type: GateType::Simple, output: "b".to_string()});
+    let mut assigned2: HashMap&lt;String, u16&gt; = HashMap::new();
+    assigned2.insert("".to_string(), 0);
+    while !assigned2.contains_key("a") {
+        for gate in &amp;gates {
+            gate.eval(&amp;mut assigned2);
+        }
+    }
+    println!("Part 2: {}", assigned2["a"]);
 }
 
 fn main() {
@@ -284,6 +300,9 @@ fn main() {
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
+                            <a rel="next prefetch" href="../aoc/2015-8.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -295,6 +314,9 @@ fn main() {
                         <i class="fa fa-angle-left"></i>
                     </a>
 
+                    <a rel="next prefetch" href="../aoc/2015-8.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                        <i class="fa fa-angle-right"></i>
+                    </a>
             </nav>
 
         </div>
