--- a/aoc/2015.html
+++ b/aoc/2015.html
@@ -165,6 +165,11 @@
 <li><a href="2015-5.html">Day 5</a></li>
 <li><a href="2015-6.html">Day 6</a></li>
 <li><a href="2015-7.html">Day 7</a></li>
+<li><a href="2015-8.html">Day 8</a></li>
+<li><a href="2015-9.html">Day 9</a></li>
+<li><a href="2015-10.html">Day 10</a></li>
+<li><a href="2015-11.html">Day 11</a></li>
+<li><a href="2015-12.html">Day 12</a></li>
 </ul>
 
                     </main>
