deploy: 099d540c3da4fe908a2c42dd5468572a080b484e

--- a/adventofcode.html
+++ b/adventofcode.html
@@ -155,17 +155,12 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="advent-of-code"><a class="header" href="#advent-of-code">Advent of code</a></h1>
-<p>They are my solutions to <a href="https://adventofcode.com/">advent of code</a> tasks. There are separated to each year and day. All of this can be found on <a href="https://github.com/metury/advent-of-code">GitHub</a>, also with the script that generates these pages.
-Plus you may also play a small <a href="https://aoc-bingo.fly.dev/">Bingo</a> that someone made. Also you may consider joining <a href="https://www.reddit.com/r/adventofcode/">Reddit</a> where you may find useful tips, or help someone. Lastly there is an <a href="https://jeroenheijmans.github.io/advent-of-code-surveys/">unofficial survey</a>.</p>
-<h3 id="years"><a class="header" href="#years">Years</a></h3>
+<p>Each year I am trying to solve the <a href="https://adventofcode.com/">advent of code</a> puzzles. The solutions I created are on a <a href="https://codeberg.org/tury/advent-of-code">Codeberg repository</a>.</p>
+<h2 id="other-links"><a class="header" href="#other-links">Other links</a></h2>
 <ul>
-<li><a href="./aoc/2024.html">Year 2024</a></li>
-<li><a href="./aoc/2023.html">Year 2023</a></li>
-<li><a href="./aoc/2022.html">Year 2022</a></li>
-<li><a href="./aoc/2021.html">Year 2021</a></li>
-<li><a href="./aoc/2017.html">Year 2017</a></li>
-<li><a href="./aoc/2016.html">Year 2016</a></li>
-<li><a href="./aoc/2015.html">Year 2015</a></li>
+<li><a href="https://www.reddit.com/r/adventofcode/">Reddit</a></li>
+<li><a href="https://aoc-bingo.fly.dev/">Bingo</a></li>
+<li><a href="https://jeroenheijmans.github.io/advent-of-code-surveys/">unofficial survey</a></li>
 </ul>
 
                     </main>
